Generazione dinamica della griglia completata

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="difficulty-selection">
             <p>Difficoltà:</p>
-            <select id="Difficoltà">
+            <select id="difficoltà">
                 <option value="Easy">Easy</option>
                 <option value="Normal">Normal</option>
 
@@ -26,7 +26,7 @@
 
             </select>
 
-            <button>Play</button>
+            <button id="confirm">Play</button>
         </div>
     </header>
 
@@ -35,7 +35,7 @@
 
         <div id="grid">
 
-            <div class="box">1</div>
+            <!-- <div class="box">1</div>
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
@@ -44,7 +44,7 @@
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
-            <div class="box"></div>
+            <div class="box"></div> -->
 
         </div>
 
