Quadrati cliccabili, esercizio completato

--- a/index.html
+++ b/index.html
@@ -35,21 +35,16 @@
 
         <div id="grid">
 
-            <!-- <div class="box">1</div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div> -->
+            
 
         </div>
 
-
     </main>
+
+
+    <footer>
+        <p>made with &hearts; by <a href="#">boolean</a></p>
+    </footer>
 
 
 
